--- a/projects/westviewcoders.org.yml
+++ b/projects/westviewcoders.org.yml
@@ -1,13 +1,15 @@
 title: "westviewcoders.org"
 slug: "westview-coders"
-summary: "Official website of the Westview Computer Science Club. Includes an online judge for grading problem solutions, a blog, and lectures. 
-	The evaluator can execute code written in C and C++."
+summary: >
+  Official website of the Westview Computer Science Club. Includes an online judge for grading problem solutions, a blog, and lectures. 
+  The evaluator can execute code written in C and C++.
+content: >
+  Official website of the Westview Computer Science Club. Includes an online judge for grading problem solutions, a blog, and lectures. 
+  The evaluator can execute code written in C and C++.
 tags:
   - c++
   - php
   - html
   - css
   - javascript
-content: >
-  github
-repo: "github.com"
+repo: "http://github.com/scen/CSJudge/"
