--- a/posts/order.yml
+++ b/posts/order.yml
@@ -1,3 +1,6 @@
 # higher is more recent
 
 - reverse-engineering-cusercmd 2012-10-03
+- fixing-unhandled-exceptions-luajit-luabind 2012-09-14
+- executing-untrusted-code-safely 2012-09-05
+- embedded-scripting-js-v-lua 2012-09-04
