--- a/posts/order.yml
+++ b/posts/order.yml
@@ -4,3 +4,9 @@
 - fixing-unhandled-exceptions-luajit-luabind 2012-09-14
 - executing-untrusted-code-safely 2012-09-05
 - embedded-scripting-js-vs-lua 2012-09-04
+- building-a-new-computer 2012-06-12
+- directx11-hooking 2012-04-13
+- maximum-bipartite-matching 2012-03-18
+- segment-trees 2012-03-17
+- tries 2012-03-13
+- binary-indexed-trees 2012-03-12
