--- a/posts/order.yml
+++ b/posts/order.yml
@@ -1,5 +1,5 @@
 # higher is more recent
-
+- treaps 2013-01-23
 - reverse-engineering-cusercmd 2012-10-03
 - fixing-unhandled-exceptions-luajit-luabind 2012-09-14
 - executing-untrusted-code-safely 2012-09-05
