added blog post on implicit treaps

--- a/posts/order.yml
+++ b/posts/order.yml
@@ -1,4 +1,5 @@
 # higher is more recent
+- implicit-treaps 2013-04-23
 - treaps 2013-01-23
 - reverse-engineering-cusercmd 2012-10-03
 - fixing-unhandled-exceptions-luajit-luabind 2012-09-14
