Add CUtil project and remove older projects
The code for the old problem grader was deprecated.

--- a/projects/order.yml
+++ b/projects/order.yml
@@ -1,8 +1,8 @@
 # order of the listing
 
-- westviewcoders.org
-- ionlib
 - stanleycen.com
+- ionlib
+- cutil
+- westviewcoders.org
 - entropy
 - prebuild-encryption
-- old-problem-grader
