--- a/posts/order.yml
+++ b/posts/order.yml
@@ -1,4 +1,5 @@
 # higher is more recent
+- facebook-messaging-analytics 2013-06-17
 - implicit-treaps 2013-04-23
 - treaps 2013-01-23
 - reverse-engineering-cusercmd 2012-10-03
