Add mac-osx-code-injection blog post

--- a/projects/fbstats.yml
+++ b/projects/fbstats.yml
@@ -9,5 +9,5 @@ tags:
 content: >
   Provides statistics and insights on your interactions with friends through facebook messenger. Track your trends over time, characters sent, most popular words, most active times, and more!
       
-  See the relevant [blog post](/blog/facebook-messaging-analytics) for images and explanations.
+  See the corresponding [blog post](/blog/facebook-messaging-analytics) for images and explanations.
 repo: "http://github.com/scen/fbstats/"
