--- a/posts/order.yml
+++ b/posts/order.yml
@@ -1,4 +1,5 @@
 # higher is more recent
+- mac-osx-code-injection 2013-08-26
 - facebook-messaging-analytics 2013-06-18
 - implicit-treaps 2013-04-23
 - treaps 2013-01-23
