--- a/posts/order.yml
+++ b/posts/order.yml
@@ -1,4 +1,5 @@
 # higher is more recent
+- facebook-messaging-analytics-android 2013-09-02
 - facebook-messaging-analytics-update 2013-08-27
 - mac-osx-code-injection 2013-08-26
 - facebook-messaging-analytics 2013-06-18
