--- a/projects/fbstats.yml
+++ b/projects/fbstats.yml
@@ -1,4 +1,4 @@
-title: "Facebook Messaging Analytics"
+title: "Facebook Messaging Analytics - Web"
 slug: "facebook-messaging-analytics"
 summary: >
   Provides statistics and insights on your interactions with friends through facebook messenger. Track your trends over time, characters sent, most popular words, most active times, and more!
