--- a/projects/westviewcoders.org.yml
+++ b/projects/westviewcoders.org.yml
@@ -5,7 +5,8 @@ summary: >
   The evaluator can execute code written in C and C++.
 content: >
   Official website of the Westview Computer Science Club. Includes an online judge for grading problem solutions, a blog, and lectures. 
-  The evaluator can execute code written in C and C++.
+  The evaluator can execute code written in C and C++. It's hosted at [westviewcoders.org](westviewcoders.org).
+  <photo cloudinary src="Screenshot_2014-01-02_12_12_15_gcktsz.png">The interface</photo>
 tags:
   - c++
   - php
